<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="horizontal"
    android:scrollbarAlwaysDrawHorizontalTrack="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="100dp">

        <NumberPicker
            android:id="@+id/daysPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/days_tiny"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <NumberPicker
            android:id="@+id/hoursPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/hours_tiny"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <NumberPicker
            android:id="@+id/minutesPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/minutes_tiny"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <NumberPicker
            android:id="@+id/secondsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/seconds_tiny"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <NumberPicker
            android:id="@+id/millisecondsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/milliseconds_tiny"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
</HorizontalScrollView>